fix #880 — disable word wrap for code blocks

--- a/nikola/data/themes/bootstrap/assets/css/theme.css
+++ b/nikola/data/themes/bootstrap/assets/css/theme.css
@@ -79,3 +79,8 @@ ul.bricks > li {
 ul.breadcrumb > li:before {
     content: " / ";
 }
+
+code {
+    white-space: pre;
+    word-wrap: normal;
+}
